--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,17 @@ venv/
 __pycache__/
 *.pyc
 .cursor/mcp.json
+.env.*
+.venv/
+env/
+*.log
+.idea/
+.vscode/
+.pytest_cache/
+.mypy_cache/
+.coverage
+htmlcov/
+dist/
+build/
+*.egg-info/
+*.sqlite3
